# emoji-tools-henry

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/: __init__.py  core.py  t.py
src/emoji_tools_henry/: __init__.py  core.py  emoji_tools_henry.py
src/emoji_tools_henry/static/: human_emojis.json
src/scripts/: extract_human_emojis.py
src/static/: human_emojis.json
src/tests/: test_tools.py
static/: emoji-modifier-sequences.txt  human_emojis.json  human_emojis.py
tests/: test.py
