[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji-tools-henry"
version = "0.0.1"
authors = [
  { name="Henry Backman", email="henry.backman@gmail.com" },
]
description = "Tools for working with emojis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "emoji"
]

[project.urls]
homepage = "https://github.com/henrybackman/emoji-tools-henry"