[metadata]
author = Henry Backman
author_email = henry.backman@gmail.com
description = Tools for handling emojis in text data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henrybackman/emoji-tools-henry
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
